<resources>
    <string name="app_name">equipoUno</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_nav_init">nav_init</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="upperlogin">LOGIN</string>
    <string name="upperreg">SIGN UP</string>
    <string name="msgCorreo">Correo electronico:</string>
    <string name="msgPassw">Contraseña:</string>
    <string name="msgplainlogin">No tienes cuenta?</string>
    <string name="msgplainreg">Ya tienes cuenta?</string>
    <string name="txtbtsign_in">SIGN IN</string>
    <string name="txtbtcrear_una_cuenta">Crear una cuenta</string>
    <string name="txtbtinicia">Inicia sesion</string>
    <string name="msgNombre">Nombre:</string>
    <string name="msgPhone">Celular:</string>
    <string name="msgAdds">Direccion:</string>
    <string name="msgbornd">Fecha de nacimiento:</string>
    <string name="piquant">Postres</string>
    <string name="bitter">Mexicana</string>
    <string name="swet">Italiana</string>
    <string name="mealty">Asiatica</string>
    <string name="salty">Panadería</string>
    <string name="sout">Vegetariana</string>
    <string name="log_out">Log out</string>
    <string name="my_recipes_fav">My recipes Fav</string>

    <string name="mi_perfil">Mi Perfil</string>
    <string name="favoritos">favoritos</string>
    <string name="celular">Celular</string>
    <string name="direccion">Dirección</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="fecha_nacimiento">Fecha de Nacimiento</string>
</resources>