<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    android:id="@+id/linearregister"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/groupStylewhite_A700">
    <FrameLayout
        android:id="@+id/frameregister"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="144dp">
        <ImageView
            android:id="@+id/imagetopreg"
            android:layout_width="match_parent"
            android:layout_height="144dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            tools:ignore="ContentDescription" android:src="@drawable/bubbles"/>
        <TextView
            android:ellipsize="end"
            android:id="@+id/uppertxtlogin"
            android:layout_gravity="top|center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="28dp"
            android:singleLine="true"
            android:text="@string/upperreg"
            style="@style/txtConcertOneregular48" tools:text="@string/upperreg" />
    </FrameLayout>
    <FrameLayout
        android:id="@+id/frameform"
        android:layout_gravity="center_horizontal"
        android:layout_width="283dp"
        android:layout_height="460dp"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:id="@+id/linearform"
            style="@style/groupStyleblue_300cornerRadius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingStart="17dp"
            android:paddingTop="23dp"
            android:paddingEnd="17dp"
            android:paddingBottom="23dp">

            <TextView
                android:id="@+id/txtNombre"
                style="@style/txtConcertOneregular16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/msgNombre"
                tools:text="@string/msgNombre" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="textPersonName"
                android:padding="5dp"
                style="@style/WhiteLineEditText"/>

            <TextView
                android:id="@+id/txtCorreoreg"
                style="@style/txtConcertOneregular16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/msgCorreo"
                tools:text="@string/msgCorreo" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                style="@style/WhiteLineEditText"/>

            <TextView
                android:id="@+id/txtPassReg"
                style="@style/txtConcertOneregular16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/msgPassw"
                tools:text="@string/msgPassw" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="textPassword"
                android:padding="5dp"
                style="@style/WhiteLineEditText"/>

            <TextView
                android:id="@+id/txtPhone"
                style="@style/txtConcertOneregular16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/msgPhone"
                tools:text="@string/msgPhone" />

            <EditText
                android:id="@+id/phoneEditText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="phone"
                android:padding="5dp"
                style="@style/WhiteLineEditText"/>

            <TextView
                android:id="@+id/txtAdds"
                style="@style/txtConcertOneregular16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/msgAdds"
                tools:text="@string/msgAdds" />

            <EditText
                android:id="@+id/addressEditText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="textPostalAddress"
                android:padding="5dp"
                style="@style/WhiteLineEditText"/>

            <TextView
                android:id="@+id/txtBornDate"
                style="@style/txtConcertOneregular16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/msgbornd"
                tools:text="@string/msgbornd" />

            <EditText
                android:id="@+id/birthdateEditText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="date"
                android:padding="5dp"
                style="@style/WhiteLineEditText"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/imageIconuser"
            android:layout_gravity="top|center"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitXY"
            android:src="@drawable/imgiconuser"/>
    </FrameLayout>
    <Button
        android:id="@+id/registerButton"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/txtbtsign_in"
        android:layout_marginTop="8dp"
        style="@style/btnSolidRounded" tools:text="@string/txtbtsign_in"/>

    <TextView
        android:ellipsize="end"
        android:id="@+id/txtplainlogin"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:singleLine="true"
        android:text="@string/msgplainreg"
        style="@style/txtConcertOneregular16blk" tools:text="@string/msgplainreg"/>
    <Button
        android:id="@+id/loginButtonRegister"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/txtbtinicia"
        android:layout_marginTop="0dp"
        style="@style/btnWhite" tools:text="@string/txtbtinicia"/>

</LinearLayout>

</layout>