<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.equipouno.app.viewmodel.UserModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="-1dp">

        <!-- Header Layout -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_toolbar"
            android:padding="10dp"
            android:paddingStart="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/back_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/ic_back_arrow" />

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/concert_one"
                android:text="MI perfil"
                android:textAllCaps="true"
                android:textColor="#F6F3E4"
                android:textSize="30sp" />
        </androidx.appcompat.widget.Toolbar>

        <!-- User Icon -->

        <ImageView
            android:id="@+id/userIcon"
            android:layout_width="146dp"
            android:layout_height="132dp"
            android:layout_marginTop="76dp"
            android:src="@drawable/profile"
            android:translationZ="-1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.464"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Name Display and Edit Layout -->
        <LinearLayout
            android:id="@+id/customRectangle"
            android:layout_width="272dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="120dp"
            android:background="@drawable/rounded_description"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/my_toolbar2">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/concert_one"
                android:gravity="center"
                android:text="Usuario"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/concert_one"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:visibility="gone" />
        </LinearLayout>

        <!-- Phone and Address Display and Edit Layout -->
        <LinearLayout
            android:id="@+id/contactRectangle"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/button_rounded"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/customRectangle">

            <TextView
                android:id="@+id/phoneLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/concert_one"
                android:text="@string/celular"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/phoneTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/concert_one"
                android:text="celular del usuario"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/phoneEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/concert_one"
                android:textColor="@android:color/white"
                android:visibility="gone" />

            <TextView
                android:id="@+id/addressLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/concert_one"
                android:text="@string/direccion"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/addressTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/concert_one"
                android:text="direccion del usuario"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/addressEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/concert_one"
                android:textColor="@android:color/white"
                android:visibility="gone" />
        </LinearLayout>

        <!-- Email and Birthdate Display and Edit Layout -->
        <LinearLayout
            android:id="@+id/emailBirthdateRectangle"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_rounded"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contactRectangle">

            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/concert_one"
                android:text="@string/correo_electronico"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/concert_one"
                android:text="correo del usuario"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/concert_one"
                android:textColor="@android:color/white"
                android:visibility="gone" />

            <TextView
                android:id="@+id/birthdateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/concert_one"
                android:text="@string/fecha_nacimiento"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/birthdateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/concert_one"
                android:text="fecha de nacimiento del usuario"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/birthdateEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/concert_one"
                android:textColor="@android:color/white"
                android:visibility="gone" />
        </LinearLayout>

        <!-- Edit Button -->
        <Button
            android:id="@+id/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_rounded"
            android:drawableLeft="@drawable/baseline_create_24"
            android:fontFamily="@font/concert_one"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:text="Editar"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailBirthdateRectangle"
            app:layout_constraintVertical_bias="0.185" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>